--- a/app/src/main/res/layout/activity_bienvenido.xml
+++ b/app/src/main/res/layout/activity_bienvenido.xml
@@ -41,7 +41,7 @@
             android:text="Registrarse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button" android:layout_marginTop="8dp"
+            android:id="@+id/registrar" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/divider2" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:background="@color/colorPrimary"
             android:textColor="@color/common_google_signin_btn_text_dark_default"/>
@@ -51,6 +51,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/comprar" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/divider2" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toEndOf="@+id/button" android:background="@color/colorAccent"
+            app:layout_constraintStart_toEndOf="@+id/registrar" android:background="@color/colorAccent"
             android:textColor="@color/common_google_signin_btn_text_dark_default"/>
 </android.support.constraint.ConstraintLayout>
