--- a/app/src/main/res/layout/activity_bienvenido.xml
+++ b/app/src/main/res/layout/activity_bienvenido.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -38,7 +38,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
     <Button
-            android:text="Registrarse"
+            android:text="Comprar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/registrar" android:layout_marginTop="8dp"
@@ -46,11 +46,12 @@
             android:layout_marginStart="8dp" android:background="@color/colorPrimary"
             android:textColor="@color/common_google_signin_btn_text_dark_default"/>
     <Button
-            android:text="Comprar"
+            android:text="Ubicar cliente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="8dp"
             android:id="@+id/comprar" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/divider2" android:layout_marginStart="8dp"
             app:layout_constraintStart_toEndOf="@+id/registrar" android:background="@color/colorAccent"
             android:textColor="@color/common_google_signin_btn_text_dark_default"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
